--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.3",
     "@types/node": "^24.9.1",
     "ts-node-dev": "^2.0.0",
