--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "sharp": "^0.34.4",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "validator": "^13.15.20"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
